<resources>
    <string name="app_name">MemoNotes</string>
    <string name="title_main">MemoNotes</string>
    <string name="title_detail">Detail</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
</resources>
